# hp2any

./: readme.md  stack.yaml
core/: CHANGES  README  hp2any-core.cabal
core/Profiling/Heap/: Network.hs  Process.hs  Read.hs  Stats.hs  Types.hs
core/test/: example.hp  tester.hs
graph/: CHANGES  hp2any-graph.cabal
graph/src/: Graph.hs  HandleArgs.hs  Relay.hs
graph/src/Profiling/Heap/: OpenGL.hs
graph/test/: heaptest.hs  readme.txt
manager/: CHANGES  Paths_hp2any_manager.hs  README  hp2any-manager.cabal
manager/src/: Manager.hs  manager.glade
