Name:                hp2any-graph
Version:             0.1.0
Cabal-Version:       >= 1.2
Synopsis:            Real-time heap graphing utility and profile stream server.
Category:            profiling, development, utils
Description:

  To add...

Author:              Patai Gergely
Maintainer:          Patai Gergely (patai@iit.bme.hu)
Copyright:           (c) 2009, Patai Gergely
License:             BSD3
License-File:        LICENSE
Stability:           experimental
Build-Type:          Simple
Extra-Source-Files:
  src/HandleArgs.hs
  CHANGES

Executable hp2any-graph
  Executable:        hp2any-graph
  HS-Source-Dirs:    src
  Main-IS:           Graph.hs
  Build-Depends:     base, process, directory, filepath, containers, bytestring, hp2any-core,
                     OpenGL, GLFW, parseargs, network
  GHC-Options:       -Wall -O2

Executable hp2any-relay
  Executable:        hp2any-relay
  HS-Source-Dirs:    src
  Main-IS:           Relay.hs
  Build-Depends:     base, process, directory, filepath, containers, bytestring, hp2any-core,
                     parseargs, network
  GHC-Options:       -Wall -O2
